--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-
+    <title>Home - Marco's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
 test
