--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-test
+<div id="nav">
+    <a href="#">one</a>
+    <a href="#">two</a>
+    <a href="#">three</a>
+    <a href="#">four</a>
+</div>
+<div id="content">
+
+</div>
 </body>
 </html>
