Somewhat setup navigation bar buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 <div id="nav">
-    <a href="#">one</a>
-    <a href="#">two</a>
-    <a href="#">three</a>
-    <a href="#">four</a>
+    <ul>
+        <li><a href="#">one</a></li>
+        <li><a href="#">two</a></li>
+        <li><a href="#">three</a></li>
+        <li><a href="#">four</a></li>
+    </ul>
 </div>
 <div id="content">
 
