Nav bar redesign

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 <div id="nav">
     <ul>
-        <li><a href="#">one</a></li>
-        <li><a href="#">two</a></li>
-        <li><a href="#">three</a></li>
-        <li><a href="#">four</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
 </div>
 <div id="content">
