Complete site redesign

--- a/index.html
+++ b/index.html
@@ -7,16 +7,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="nav">
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-</div>
-<div id="content">
-
-</div>
+    <div id="nav">
+        <ul>
+            <li id="logo">MARCO DIAZ MOORE</li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="https://www.github.com/marco-dm1">Github</a></li>
+            <li><a href="https://www.linkedin.com/404">LinkedIn</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+    <div id="content">
+        <div id="info">
+            Hi!<br>
+            I'm a soon-to-be first year Computer Science student at Holyoke Community College
+        </div>
+        <div id="projects">
+            <span style="font-weight: 400; font-size: 30px; display: block; margin-bottom: 20px;">MY PROJECTS</span>
+            <div id="project-box-container">
+                <div class="project-box">
+                    Project 1
+                </div>
+                <div class="project-box">
+                    Project 2
+                </div>
+                <div class="project-box">
+                    Project 3
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        Created by marco-dm1 in April of 2021.
+    </div>
 </body>
 </html>
