Project 1 image and buttons addition

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="img/png" href="https://github.githubassets.com/favicons/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="nav">
@@ -25,7 +25,10 @@
             <span style="font-weight: 400; font-size: 30px; display: block; margin-bottom: 20px;">MY PROJECTS</span>
             <div id="project-box-container">
                 <div class="project-box">
-                    Project 1
+                    Project 1 - Portfolio Site
+                    <img src="images/portfolio-project.jpg" alt="Photo by Lauren Mancke on Unsplash">
+                    <a class="anchorButton" href="#">LIVE VERSION</a>
+                    <a class="anchorButton" href="#">SOURCE CODE</a>
                 </div>
                 <div class="project-box">
                     Project 2
