Added photo credits, added content to Project 2 and 3 frames

--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
             <div id="project-box-container">
                 <div class="project-box">
                     Project 1 - Portfolio Site
-                    <img src="images/portfolio-project.jpg" alt="Photo by Lauren Mancke on Unsplash">
+                    <img src="images/portfolio-project.jpg">
                     <a class="anchorButton" href="#">LIVE VERSION</a>
                     <a class="anchorButton" href="#">SOURCE CODE</a>
                 </div>
                 <div class="project-box">
-                    Project 2
+                    Project 2 - Coming Soon
+                    <img src="images/coming-soon.jpg">
                 </div>
                 <div class="project-box">
-                    Project 3
+                    Project 3 - Coming Soon
+                    <img src="images/coming-soon.jpg">
                 </div>
             </div>
         </div>
     </div>
     <div id="footer">
         Created by marco-dm1 in April of 2021.
+        <i>Photos by Laurenk Mancke, Mark König on Unsplash</i>
     </div>
 </body>
 </html>
