--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="content">
         <div id="info">
             Hi!<br>
-            I'm a soon-to-be first year Computer Science student at Holyoke Community College
+            I'm a first year Computer Science student at Holyoke Community College
         </div>
         <div id="projects">
             <span style="font-weight: 400; font-size: 30px; display: block; margin-bottom: 20px;">MY PROJECTS</span>
